--- a/components/cluster/cluster-glue/Makefile
+++ b/components/cluster/cluster-glue/Makefile
@@ -64,6 +64,8 @@ REQUIRED_PACKAGES += library/glib2
 REQUIRED_PACKAGES += library/libtool/libltdl
 REQUIRED_PACKAGES += library/libxml2
 REQUIRED_PACKAGES += library/zlib
+REQUIRED_PACKAGES += $(PERL_PKG)
+REQUIRED_PACKAGES += shell/bash
 REQUIRED_PACKAGES += system/library
 REQUIRED_PACKAGES += system/library/g++-4-runtime
 REQUIRED_PACKAGES += system/management/snmp/net-snmp
