gnome-doc-utils: switch to Py3

--- a/components/developer/gnome-doc-utils/Makefile
+++ b/components/developer/gnome-doc-utils/Makefile
@@ -12,11 +12,12 @@
 # Copyright 2016 Alexander Pyhalov
 #
 
+BUILD_BITS = 32
 include ../../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		gnome-doc-utils
 COMPONENT_VERSION=	0.20.10
-COMPONENT_REVISION=	2
+COMPONENT_REVISION=	3
 COMPONENT_PROJECT_URL=	http://www.gnome.org
 COMPONENT_SUMMARY=	Documentation utilities for GNOME
 COMPONENT_SRC=		$(COMPONENT_NAME)-$(COMPONENT_VERSION)
@@ -25,11 +26,13 @@ COMPONENT_ARCHIVE_HASH=	\
     sha256:cb0639ffa9550b6ddf3b62f3b1add92fb92ab4690d351f2353cffe668be8c4a6
 COMPONENT_ARCHIVE_URL=	http://ftp.gnome.org/pub/GNOME/sources/$(COMPONENT_NAME)/0.20/$(COMPONENT_ARCHIVE)
 
-include $(WS_TOP)/make-rules/prep.mk
-include $(WS_TOP)/make-rules/configure.mk
-include $(WS_TOP)/make-rules/ips.mk
+PYTHON_VERSION = 3.5
 
-PATH=/usr/gnu/bin:/usr/bin
+include $(WS_MAKE_RULES)/common.mk
+
+PATH=$(PATH.gnu)
+
+#COMPONENT_PREP_ACTION = (cd $(@D) && autoreconf -fi)
 
 # Missing files in build dir for xml2po without this.
 COMPONENT_PRE_CONFIGURE_ACTION = ($(CLONEY) $(SOURCE_DIR) $(@D))
@@ -42,12 +45,10 @@ CONFIGURE_ENV+=  am_cv_python_pythondir="$(PYTHON.$(PYTHON_VERSION).VENDOR_PACKA
 
 COMPONENT_BUILD_ARGS += V=1
 
-# common targets
-build:		$(BUILD_32)
-
-install:	$(INSTALL_32)
-
-test:		$(NO_TESTS)
+COMPONENT_POST_INSTALL_ACTION +=	cd  $(PROTO_DIR)/$(PYTHON_VENDOR_PACKAGES)/xml2po && \
+					$(PYTHON) -m compileall . && \
+					cd $(PROTO_DIR)/$(PYTHON_VENDOR_PACKAGES)/xml2po/modes && \
+					$(PYTHON) -m compileall . 
 
 REQUIRED_PACKAGES += SUNWcs
 REQUIRED_PACKAGES += library/python/libxml2-27
